--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       box-shadow: 0 0 20px limegreen;
     }
     <div>
-  <textarea id="userInput" placeholder="Type your message to EchoAi..."></textarea><br/>
+  <textarea id="userInput" placeholder="EcoAi how may I help you..."></textarea><br/>
   <button class="send" onclick="sendToEcho()">🫡 Send</button>
   <div id="echoResponse" style="margin-top:20px; font-style:italic;"></div>
     }
