--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 <body>
   <div class="box">
     <h1>🌱 EcoAi</h1>
-    <p>Welcome to your personal AI companion</p>
+    <p>Welcome to your AI-powered command center</p>
 
     <div>
       <textarea id="userInput" placeholder="Type your message to EchoAi..."></textarea><br/>
